# SimpleSharingShouldNotBeThisHard

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
.cargo/: config.toml
public/: style.css
public/js/: htmx-ext-loading-states.js  lib.js
src/: cleanup.rs  main.rs  service.rs  util.rs
src/components/: error_page.rs  internal_server_error.rs  mod.rs  not_found.rs  page.rs
src/routes/: debug_routes.rs  index.rs  mod.rs  not_found.rs  shared.rs  stream.rs
src/routes/file/: index.rs  mod.rs  view.rs
